--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sunt praesentium culpa modi voluptatem deserunt autem. Perspiciatis dolor sint, incidunt nemo neque quo porro, illum distinctio molestiae possimus quasi nulla.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, blanditiis dolores. Ut, ratione mollitia rerum maxime commodi iure, cupiditate dolorum veritatis accusamus, excepturi inventore minima dolor atque soluta odio voluptatem?</p>
         </article>
     </main>
 </body>
