--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </header>
         <article>
             <h2>Curso de HTML5 com CSS</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus sunt praesentium culpa modi voluptatem deserunt autem. Perspiciatis dolor sint, incidunt nemo neque quo porro, illum distinctio molestiae possimus quasi nulla.</p>
+            <p>A <abbr title="HyperText Markup Language">HTML</abbr> é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa a semântica dos elementos para criar o conteúdo de uma página Web. Com as <abbr title="Cascading Style Sheets">CSS</abbr>, criamos as configurações visuais que um site vai ter.</p>
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, blanditiis dolores. Ut, ratione mollitia rerum maxime commodi iure, cupiditate dolorum veritatis accusamus, excepturi inventore minima dolor atque soluta odio voluptatem?</p>
+            <p><abbr title="JavaScript">JavaScript</abbr> é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos HTML pro meio do <abbr title="Document Object Model">DOM</abbr>.</p>
         </article>
     </main>
 </body>
